--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,12 @@
 .header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 150px;
   background-color: #0D0D0D;
 }
 .title{
   color: #4EA8DE;
-  display: flex;
-  justify-content: center;
+  background-color: #0D0D0D;
 }
