--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -4,9 +4,14 @@
 }
 .input{
   width: 500px;
-  height: 35px;
+  height: 40px;
   border-radius: 8px;
-  border: 1px solid;
+  border: 1px solid #0D0D0D;
   background-color: #262626;
   padding: 16px
+}
+.button{
+  background-color: #1E6F9F;
+  border-radius: 8px;
+  color: #F2F2F2;
 }
