--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
 *{
-  background-color:aliceblue;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+:root{
+  width: 100%;
+  background-color: #1A1A1A;
+}
+.semTecnologia{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+.text{
+  font-size: 16px;
+  color: #808080;
+  font-weight: 700;
+}
+.text2{
+  font-size: 16px;
+  color: #808080;
 }
