--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -1,10 +1,14 @@
 .boxInput{
   display: flex;
   justify-content: center;
+  position: absolute;
+  margin-top: -25px;
+  width: 100%;
+  gap: 8px;
 }
 .input{
   width: 500px;
-  height: 40px;
+  height: 50px;
   border-radius: 8px;
   border: 1px solid #0D0D0D;
   background-color: #262626;
@@ -14,4 +18,9 @@
   background-color: #1E6F9F;
   border-radius: 8px;
   color: #F2F2F2;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
