--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 38%;
+  border-radius: 8px;
+  padding-top: 70px;
+  border-top: 1px solid #333333;
 }
 .text{
+  font-family: Inter;
   font-size: 16px;
   color: #808080;
   font-weight: 700;
 }
 .text2{
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
   font-size: 16px;
   color: #808080;
 }
