--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
 .header{
   display: flex;
   justify-content: center;
@@ -9,4 +10,6 @@
 .title{
   color: #4EA8DE;
   background-color: #0D0D0D;
+  font-family: Inter;
+  font-weight: 900;
 }
