--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap');
 .boxInput{
   display: flex;
   justify-content: center;
@@ -7,6 +8,9 @@
   gap: 8px;
 }
 .input{
+  font-family: Inter;
+  font-weight: 700;
+  color: #D9D9D9;
   width: 500px;
   height: 50px;
   border-radius: 8px;
@@ -17,6 +21,9 @@
 .button{
   background-color: #1E6F9F;
   border-radius: 8px;
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 14px;
   color: #F2F2F2;
   width: 80px;
   display: flex;
